--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -383,6 +383,9 @@ spec:
                     type: object
                   description: Conditions contains conditions an installation is in, its primary use case is status signaling between controllers or between controllers and the API
                   type: object
+                failures:
+                  description: Failures counts the number of failed installation or updagrade. it is reset on successful reconciliation.
+                  type: integer
                 helmRelease:
                   description: HelmRelease holds the information about the helm release installed by this application. This field is only filled if template method is 'helm'.
                   properties:
