--- a/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/config-customresourcedefinition.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/config-customresourcedefinition.yaml
@@ -1,10 +1,9 @@
-# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.7.2/charts/gatekeeper/crds/assignmetadata-customresourcedefinition.yaml
-
+# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.8/charts/gatekeeper/crds/assignmetadata-customresourcedefinition.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   labels:
     gatekeeper.sh/system: "yes"
   name: configs.config.gatekeeper.sh
@@ -40,8 +39,8 @@ spec:
                     properties:
                       excludedNamespaces:
                         items:
-                          description: 'A string that supports globbing at its end.  Ex: "kube-*" will match "kube-system" or "kube-public".  The asterisk is required for wildcard matching.'
-                          pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\*|-\*)?$
+                          description: 'A string that supports globbing at its front or end. Ex: "kube-*" will match "kube-system" or "kube-public", "*-system" will match "kube-system" or "gatekeeper-system".  The asterisk is required for wildcard matching.'
+                          pattern: ^(\*|\*-)?[a-z0-9]([-a-z0-9]*[a-z0-9])?$|^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\*|-\*)?$
                           type: string
                         type: array
                       processes:
