--- a/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/provider-customresourcedefinition.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/provider-customresourcedefinition.yaml
@@ -1,10 +1,9 @@
-# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.7.2/charts/gatekeeper/crds/mutatorpodstatus-customresourcedefinition.yaml
-
+# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.8/charts/gatekeeper/crds/mutatorpodstatus-customresourcedefinition.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   labels:
     gatekeeper.sh/system: "yes"
   name: providers.externaldata.gatekeeper.sh
